# mjpeg-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: mjpeg_server-config.cmake.in
examples/: CMakeLists.txt
examples/simple/: CMakeLists.txt  Info.plist  main.cpp
include/mjpeg_server/: mjpeg_server.h
src/: mjpeg_server.cpp
